<resources>
    <string name="app_name">Constraint Layout</string>
    <string name="to">To:</string>
    <string name="email">Email</string>
    <string name="Subject">Subject </string>
    <string name="send">Send</string>
    <string name="message">Message</string>
    <string name="peso">Peso kg</string>
    <string name="tipo">Tipo</string>
    <string name="descripcion">Descripción</string>
</resources>